k8s/billings.yaml
apiVersion: v1
kind: Service
metadata:
  name: billings
spec:
  type: NodePort
  selector:
    app: billings
  ports:
    - protocol: TCP
      port: 5100
      targetPort: 5100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billings
  labels:
    app: billings
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billings
  template:
    metadata:
      labels:
        app: billings
    spec:
      containers:
        - name: billings
          image: registry.gitlab.com/cs302-2025/g2-team5/services/billings/main:e8cab5bd4651fb9fa1a517103bf073132602cfca
          imagePullPolicy: Always
          ports:
            - containerPort: 5100
          livenessProbe:
            httpGet:
              path: /health
              port: 5100
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5100
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
