k8s/dispatch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch
spec:
  type: NodePort
  selector:
    app: dispatch
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch
  labels:
    app: dispatch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
    spec:
      containers:
        - name: dispatch
          image: registry.gitlab.com/cs302-2025/g2-team5/services/dispatch/main:354d8c6ebce9ee6001ebb8fdd875a2cef40aafcc
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m # 0.1 CPU cores
              memory: 128Mi
            limits:
              cpu: 500m # 0.5 CPU cores max
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
