k8s/events-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-manager
spec:
  type: NodePort
  selector:
    app: events-manager
  ports:
    - protocol: TCP
      port: 8011
      targetPort: 8011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-manager
  labels:
    app: events-manager
spec:
  replicas: 1 #Only one events manager at a time to prevent rabbitmq race condition
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: events-manager
  template:
    metadata:
      labels:
        app: events-manager
    spec:
      containers:
        - name: events-manager
          image: registry.gitlab.com/cs302-2025/g2-team5/services/events-manager/main:10f009557e9b782b87bd4dc5185fb1e85b079045
          imagePullPolicy: Always
          ports:
            - containerPort: 8011
          livenessProbe:
            httpGet:
              path: /health
              port: 8011
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8011
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
