k8s/events-stream.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-stream
spec:
  type: NodePort
  selector:
    app: events-stream
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-stream
  labels:
    app: events-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-stream
  template:
    metadata:
      labels:
        app: events-stream
    spec:
      containers:
        - name: events-stream
          image: registry.gitlab.com/cs302-2025/g2-team5/services/events-stream/main:e37c1050620ca16652946f8aa2e71947c77a6e17
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          livenessProbe:
            httpGet:
              path: /health
              port: 8090
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8090
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
