k8s/insurance.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance
spec:
  type: NodePort
  selector:
    app: insurance
  ports:
    - protocol: TCP
      port: 5200
      targetPort: 5200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance
  labels:
    app: insurance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
        - name: insurance
          image: registry.gitlab.com/cs302-2025/g2-team5/services/insurance/main:82214c2d502c3e9104015f3ab45c9d0467627c6d
          imagePullPolicy: Always
          ports:
            - containerPort: 5200
          livenessProbe:
            httpGet:
              path: /health
              port: 5200
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5200
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
