k8s/notification.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  type: NodePort
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: registry.gitlab.com/cs302-2025/g2-team5/services/notification/main:71098cdd645e0d05cd4c2eb5a63e01f49a19b536
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
