k8s/wearable.yaml
apiVersion: v1
kind: Service
metadata:
  name: wearable
spec:
  type: NodePort
  selector:
    app: wearable
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wearable
  labels:
    app: wearable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wearable
  template:
    metadata:
      labels:
        app: wearable
    spec:
      containers:
        - name: wearable
          image: registry.gitlab.com/cs302-2025/g2-team5/services/wearable/main:e269a2ae90634b62e5e871290c92048dc1b66861
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry-access-g2t5
